some trivial changes

--- a/poster.tex
+++ b/poster.tex
@@ -256,9 +256,9 @@ The MNE package for M/EEG data processing
 \begin{minipage}[B]{0.47\linewidth}
     \begin{myexampleblock}{Features}
         \subsection{Preprocessing}
-        \mydot Filter, review raw data, correct ECG / EOG with SSPs\\
+        \mydot Review raw data, filter, correct ECG / EOG with SSPs\\
         \subsection{Forward modeling}
-        \mydot Automatic BEM with Freesurfer reconstruction\\
+        \mydot Automatic BEM with FreeSurfer reconstruction\\
         \subsection{Inverse modeling}
         \mydot MNE - dSPM - sLORETA - LCMV - MxNE\\
         \subsection{Statistics}
@@ -267,7 +267,7 @@ The MNE package for M/EEG data processing
     \begin{myalertblock}{Project vision \& Goals}
         \mydot State of the art pipeline\\
         \mydot Well documented, tested and easy to use\\
-        \mydot Open development between different labs\\
+        \mydot Open development, collaboration between different labs\\
         \mydot Sharing best practices for analysis\\
         \mydot Make reproducible research with M/EEG\\
     \end{myalertblock}
@@ -324,7 +324,7 @@ The MNE package for M/EEG data processing
     \begin{minipage}[t]{0.48\linewidth}
         \begin{myexampleblock}{MNE-Python}
             \mydot Python: general-purpose, high-level language \\
-            \mydot Free (can run on a cluster without license problem)\\
+            \mydot Free (can run on a cluster without license problems)\\
             \mydot Permissive BSD license (allows use in commercial products)\\
             \mydot Open http://github.com/mne-tools/mne-python\\
             \mydot 14 contributors so far
@@ -337,7 +337,7 @@ The MNE package for M/EEG data processing
                 \mydot Mailing list: mne\_analysis@nmr.mgh.harvard.edu\\
                 \mydot http://martinos.org/mne/ (general doc)\\
                 \mydot http://martinos.org/mne/python\_tutorial.html\\
-                \mydot http://martinos.org/mne/auto\_examples/ (> 40 demo)\\
+                \mydot http://martinos.org/mne/auto\_examples/ (> 40 demos)\\
                 \mydot http://mne-tools.github.com/mne-python-intro-slides\\
             \end{minipage}
         \end{myalertblock}
@@ -345,7 +345,7 @@ The MNE package for M/EEG data processing
     \begin{minipage}[t]{0.5\linewidth}
         \begin{myexampleblock}{From raw to dSPM in < 30 lines of code}
         \hspace*{.01\linewidth}%
-        \vspace{-0.6cm}
+        \vspace{-0.3cm}
         \inputpython{short_example.py}
         \end{myexampleblock}
     \end{minipage}
