--- a/poster.tex
+++ b/poster.tex
@@ -202,10 +202,8 @@ The MNE package for M/EEG data processing
 % Authors and logos {{{---
 \begin{minipage}{0.165\linewidth}
     \centerline{%
-    \includegraphics[width=0.42\linewidth]{logo_harvard}%
-    \hfill
-    \includegraphics[width=0.42\linewidth]{logo_mgh}%
-    \hfill
+    \hspace{3mm}
+    \includegraphics[width=1.15\linewidth]{MClogo.jpg}%
     }
     \vspace{2ex}
 \end{minipage}
