--- a/poster.tex
+++ b/poster.tex
@@ -199,19 +199,20 @@
 \smallskip
 The MNE package for M/EEG data processing
 }
+\vspace*{-0.2em}%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Authors and logos {{{---
 \begin{minipage}{0.165\linewidth}
     \centerline{%
     \hspace{3mm}
-    \includegraphics[width=1.15\linewidth]{MClogo.jpg}%
+    \includegraphics[width=1.2\linewidth]{MClogo.jpg}%
     }
     \vspace{2ex}
 \end{minipage}
 %
 \hfill
 %
-\vspace*{-1em}%
+\vspace*{-0.5em}%
 \mybox[width=0.64\linewidth, opacity=0., color=white]{%
     \small
     \def\MGH{\unskip$^{\dagger}$}
@@ -252,7 +253,7 @@ The MNE package for M/EEG data processing
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %-------------------------------------------------------------------------------
 
-\medskip
+% \medskip
 
 \begin{minipage}[B]{0.47\linewidth}
     \begin{myexampleblock}{Features}
@@ -281,8 +282,6 @@ The MNE package for M/EEG data processing
     \Large\bfseries
     \begin{minipage}{\linewidth}
         \centering
-        The ``MNE-suite''
-
     C / Unix \& Matlab \& Python
     \begin{center}
         \includegraphics[width=\linewidth]{mne-screenshot-montage.png}%
@@ -292,7 +291,7 @@ The MNE package for M/EEG data processing
 % First row ---}}}
 
 \begin{minipage}{\linewidth}
-    \medskip
+    \smallskip
 \center
 {\huge\bfseries\sffamily http://martinos.org/mne~~~~~~http://github.com/mne-tools}
 \end{minipage}
@@ -362,6 +361,8 @@ The MNE package for M/EEG data processing
 
 \vfillll
 
+\vspace*{-0.5em}%
+
 % Bottom banner {{{---
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -381,13 +382,13 @@ The MNE package for M/EEG data processing
     \includegraphics[width=\linewidth]{mne_lcmv_freeview.png}%
 \end{minipage}%
 \hfill%
-% \begin{minipage}{.19\linewidth}
-%     \includegraphics[width=\linewidth]{nonlinear_svm}
-%     \llap{\raisebox{15ex}{Custom kernel SVM ~}}
-% \end{minipage}%
-\hfill%
-% Second row ---}}}
-\medskip
+
+% \medskip
+
+\begin{minipage}{\linewidth}
+    \center
+    Funded by: NIH P41RR14075, R01EB009048, NSF 0958669
+\end{minipage}
 
 \smallskip
 ~
