--- a/poster.tex
+++ b/poster.tex
@@ -270,7 +270,7 @@ The MNE package for M/EEG data processing
     \smallskip
     \begin{myalertblock}{Project vision \& Goals}
         \mydot State of the art with many examples\\
-        \mydot Documented, tested and easy to use\\
+        \mydot Documented, tested, and easy to use\\
         \mydot Open development, collaboration between different labs\\
         \mydot Sharing best practices for analysis\\
         \mydot Make reproducible research with M/EEG\\
