ENH: Updating to 2013

--- a/agmacros.sty
+++ b/agmacros.sty
@@ -273,11 +273,11 @@
 \newcommand{\M}{\underline{M}}
 \newcommand{\E}{\mat{E}}
 \newcommand{\W}{\mat{W}}
-\newcommand{\U}{\mat{U}}
+% \newcommand{\U}{\mat{U}}
 \newcommand{\D}{\mat{D}}
 % \newcommand{\L}{\mat{L}}
 \newcommand{\V}{\mat{V}}
-\newcommand{\C}{\mat{C}}
+% \newcommand{\C}{\mat{C}}
 \newcommand{\SSigma}{\mat{\Sigma}}
 \newcommand{\EE}{\mathcal{E}}
 \newcommand{\Hz}{~\mathrm{Hz}}
