--- a/gaelbeamer/my_beamercolorthemeGael.sty
+++ b/gaelbeamer/my_beamercolorthemeGael.sty
@@ -1,4 +1,4 @@
-\ProvidesPackageRCS $Header: /cvsroot/latex-beamer/latex-beamer/themes/color/beamercolorthemecrane.sty,v 1.8 2004/10/28 17:15:51 tantau Exp $
+\ProvidesPackageRCS $Header: gaelposter.sty,v 1.8 2004/10/28 17:15:51 tantau Exp $
 
 % Addapted from beamercolortheeSkole by Gael Varoquaux
 
