update affiliation + logo and ref to the future paper

--- a/poster.tex
+++ b/poster.tex
@@ -204,11 +204,11 @@ The MNE package for M/EEG data processing
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Authors and logos {{{---
 \begin{minipage}{0.165\linewidth}
+    \vspace{2ex}
     \centerline{%
     \hspace{3mm}
     \includegraphics[width=1.2\linewidth]{MClogo.jpg}%
     }
-    \vspace{2ex}
 \end{minipage}
 %
 \hfill
@@ -232,8 +232,8 @@ The MNE package for M/EEG data processing
 	\vspace{0.05cm}
 	\def\affilbr{\hspace{0.2cm}}
     \parbox{13cm}{\tiny\center
-                 \PARISTECH Parietal Project Team, INRIA, France \affilbr
-                 \MGH MGH, Harvard Medical School, USA \affilbr
+                 \PARISTECH Telecom ParisTech, CNRS LTCI - CEA/Neurospin \affilbr
+                 \MGH MGH, Harvard Med. School, USA \affilbr
                  \UW U. of Washington, USA\\
                  \JUELICH INM-3, Juelich Research Center, Germany \affilbr
                  \ILMENAU Ilmenau U., Germany \affilbr
@@ -246,10 +246,9 @@ The MNE package for M/EEG data processing
 \begin{minipage}{0.165\linewidth}
     \hfill
     \centerline{%
-    \includegraphics[width=0.85\linewidth]{logo_inria_simple}
-    }
-    \centerline{%
-    \includegraphics[width=1\linewidth]{logo_parietal}
+    \includegraphics[width=0.44\linewidth]{logo_telecom}
+    \,
+    \includegraphics[width=0.55\linewidth]{logo_cea}
     }
 \end{minipage}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -262,7 +261,7 @@ The MNE package for M/EEG data processing
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %-------------------------------------------------------------------------------
 
-% \medskip
+\smallskip
 
 \begin{minipage}[B]{0.47\linewidth}
     \begin{myexampleblock}{Features}
@@ -303,8 +302,20 @@ The MNE package for M/EEG data processing
 \center
 {\huge\bfseries\sffamily http://martinos.org/mne~~~~~~http://github.com/mne-tools}
 \end{minipage}
-\medskip
-\vfillll
+
+\begin{minipage}{\linewidth}
+\smallskip
+\centering
+\begin{minipage}{0.05\linewidth}
+    \includegraphics[width=0.9\linewidth]{paper_logo.pdf}%
+\end{minipage}
+\begin{minipage}{0.87\linewidth}
+    A. Gramfort, M. Luessi, E. Larson, D. Engemann, D. Strohmeier, C. Brodbeck, L. Parkkonen, M. H\"am\"al\"ainen\hfill
+    \emph{MNE software for processing MEG and EEG data}, To appear.
+\end{minipage}
+\end{minipage}
+% \medskip
+% \vfillll
 
 % Bottom banner {{{---
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
