Added umlauts and modified the text

--- a/poster.tex
+++ b/poster.tex
@@ -228,7 +228,7 @@ The MNE package for M/EEG data processing
     \mbox{\hspace{-1em}%
     \name{A. Gramfort\PARISTECH, M. Luessi\MGH, E. Larson\UW, D.A. Engemann\JUELICH},}
     \mbox{\hspace{-1em}%
-    \name{D. Strohmeier\ILMENAU, C. Brodbeck\NYU, M. Hamalainen\MGH}}
+    \name{D. Strohmeier\ILMENAU, C. Brodbeck\NYU, M. H\"am\"al\"ainen\MGH}}
 	\vspace{0.05cm}
 	\def\affilbr{\hspace{0.2cm}}
     \parbox{13cm}{\tiny\center
@@ -346,10 +346,10 @@ The MNE package for M/EEG data processing
     \begin{minipage}[t]{0.48\linewidth}
         \begin{myexampleblock}{MNE-Python}
             \mydot Python: general-purpose, high-level language \\
-            \mydot Free (can run on a cluster without license problems)\\
-            \mydot Permissive BSD license (allows use in commercial products)\\
-            \mydot Many third-party packages easily integrated (e.g., ML)\\
-            \mydot Open, 29 contributors so far ($\approx 8$ person-years of effort)
+            \mydot Free: can run on a cluster without license problems\\
+            \mydot Permissive BSD license: allows use in commercial products\\
+            \mydot Many third-party packages easily integrated, e.g., ML\\
+            \mydot Open, 29 contributors so far: $\approx 8$ person years of effort
             \begin{center}
                 \includegraphics[width=0.8\linewidth]{sloc_june_2013.png}%
             \end{center}
@@ -359,7 +359,7 @@ The MNE package for M/EEG data processing
                 \mydot Mailing list: mne\_analysis@nmr.mgh.harvard.edu\\
                 \mydot http://martinos.org/mne/ (general doc)\\
                 \mydot http://martinos.org/mne/python\_tutorial.html\\
-                \mydot http://martinos.org/mne/auto\_examples/ (> 40 demos)\\
+                \mydot http://martinos.org/mne/auto\_examples/ (> 70 demos)\\
                 \mydot http://mne-tools.github.com/mne-python-intro-slides\\
             \end{minipage}
         \end{myalertblock}
@@ -405,7 +405,7 @@ The MNE package for M/EEG data processing
 
 \begin{minipage}{\linewidth}
     \center
-    Funded by: NIH P41RR14075, R01EB009048, F32DC012456, NSF 0958669, 1042134
+    Funded by: NIH grants P41RR14075, R01EB009048, F32DC012456 and NSF awards 0958669, 1042134
 \end{minipage}
 
 \smallskip
