Edited the poster further. We now have "MNE Software Family"

--- a/poster.tex
+++ b/poster.tex
@@ -264,23 +264,23 @@ The MNE package for M/EEG data processing
 \smallskip
 
 \begin{minipage}[B]{0.47\linewidth}
-    \begin{myexampleblock}{Features}
+    \begin{myexampleblock}{Features of the MNE Software Family}
         \subsection{Preprocessing}
         \mydot Review raw data, filter, correct ECG / EOG with SSPs, ICA\\
         \subsection{Forward \& inverse modeling}
-        \mydot Automatic BEM with FreeSurfer reconstruction\\
-        \mydot MNE - dSPM - sLORETA - LCMV - (TF-)MxNE\\
-        \subsection{Statistics (sensor \& source space)}
-        \mydot Time-Frequency (Phase-Lock, Induced Power)\\
+        \mydot FreeSurfer structural data: Automatic forward modeling\\
+        \mydot MNE -- dSPM -- sLORETA -- (TF-)MxNE -- LCMV\\
+        \subsection{Statistics (sensor and source spaces)}
+        \mydot Time-Frequency (Phase-Locking, Induced Power)\\
         \mydot Parametric and non-parametric stats, with clustering\\
-        \subsection{Connectivity (sensor \& source space)}
-        \mydot Functional \& effective connectivity measures
+        \subsection{Connectivity (sensor and source spaces)}
+        \mydot Functional and effective connectivity measures
     \end{myexampleblock}
     \smallskip
-    \begin{myalertblock}{Project vision \& Goals}
-        \mydot State of the art, many examples, documented \& tested\\
-        \mydot Open development, collaboration between many labs\\
-        \mydot Sharing best practices, making reproducible research\\
+    \begin{myalertblock}{Project Vision and Goals}
+        \mydot State of the art, many examples, documented and tested\\
+        \mydot Open development, collaboration between several centers\\
+        \mydot Sharing best practices, promoting reproducible research\\
     \end{myalertblock}
 \end{minipage}%
 %
@@ -289,7 +289,7 @@ The MNE package for M/EEG data processing
     \Large\bfseries
     \begin{minipage}{\linewidth}
         \centering
-    C / Unix \& Matlab \& Python
+    MNE-C -- MNE-Matlab -- MNE-Python
     \begin{center}
         \includegraphics[width=\linewidth]{mne-screenshot-montage.png}%
     \end{center}
@@ -311,7 +311,7 @@ The MNE package for M/EEG data processing
 \end{minipage}
 \begin{minipage}{0.87\linewidth}
     A. Gramfort, M. Luessi, E. Larson, D. Engemann, D. Strohmeier, C. Brodbeck, L. Parkkonen, M. H\"am\"al\"ainen\hfill
-    \emph{MNE software for processing MEG and EEG data}, To appear.
+    \emph{MNE software for processing MEG and EEG data}, Submitted.
 \end{minipage}
 \end{minipage}
 % \medskip
