--- a/poster.tex
+++ b/poster.tex
@@ -224,7 +224,7 @@ The MNE package for M/EEG data processing
     \vspace{2ex}
     \centerline{%
     \hspace{3mm}
-    \includegraphics[width=1.2\linewidth]{MClogo.jpg}%
+    \includegraphics[width=1.2\linewidth]{MClogo.pdf}%
     }
 \end{minipage}
 %
