EMH: let's say project statement
maybe this is only me, Visions and Goals sound as if the
points mentioned were not yer realized which in fact they are.

--- a/poster.tex
+++ b/poster.tex
@@ -300,7 +300,7 @@ The MNE package for M/EEG data processing
         \mydot Functional and effective connectivity measures
     \end{myexampleblock}
     \smallskip
-    \begin{myalertblock}{Project Vision and Goals}
+    \begin{myalertblock}{Project Statement}
         \mydot State of the art, many examples, documented and tested\\
         \mydot Open development, collaboration between several centers\\
         \mydot Sharing best practices, promoting reproducible research\\
