Provide vision first, then features

--- a/poster.tex
+++ b/poster.tex
@@ -287,7 +287,13 @@ The MNE package for M/EEG data processing
 \smallskip
 
 \begin{minipage}[B]{0.47\linewidth}
-    \begin{myexampleblock}{Features of the MNE Software Family}
+    \begin{myalertblock}{The MNE Software Vision}
+        \mydot State-of-the-art methods, many examples, documented and tested\\
+        \mydot Open development: collaboration between several centers\\
+        \mydot Share the best practices, promote reproducible research\\
+    \end{myalertblock}
+    \smallskip
+    \begin{myexampleblock}{Software Features}
         \subsection{Preprocessing}
         \mydot Review raw data, filter, correct ECG / EOG with SSPs, ICA\\
         \subsection{Forward \& inverse modeling}
@@ -299,12 +305,7 @@ The MNE package for M/EEG data processing
         \subsection{Connectivity (sensor and source spaces)}
         \mydot Functional and effective connectivity measures
     \end{myexampleblock}
-    \smallskip
-    \begin{myalertblock}{Project Statement}
-        \mydot State of the art, many examples, documented and tested\\
-        \mydot Open development, collaboration between several centers\\
-        \mydot Sharing best practices, promoting reproducible research\\
-    \end{myalertblock}
+  
 \end{minipage}%
 %
 \hfill%
@@ -312,6 +313,7 @@ The MNE package for M/EEG data processing
     \Large\bfseries
     \begin{minipage}{\linewidth}
         \centering
+        The MNE Software Family\\
     MNE-C -- MNE-Matlab -- MNE-Python
     \begin{center}
         \includegraphics[width=\linewidth]{mne-screenshot-montage.png}%
