ENH: Add UW logo

--- a/poster.tex
+++ b/poster.tex
@@ -263,14 +263,18 @@ The MNE package for M/EEG data processing
 \begin{minipage}{0.14\linewidth}
     \hfill
     \centerline{%
-    \includegraphics[width=0.44\linewidth]{logo_telecom}
+    \includegraphics[width=0.25\linewidth]{logo_telecom}
     \,
-    \includegraphics[width=0.55\linewidth]{logo_cea}
+    \includegraphics[width=0.31\linewidth]{logo_cea}
+    \,
+    \includegraphics[width=0.35\linewidth]{logo_uw}
     }
+    \centerline{%
     \,
     \includegraphics[width=0.60\linewidth]{logo_fzj}
     \,
     \includegraphics[width=0.30\linewidth]{logo_cns}
+    }
   
 \end{minipage}
 
