added logo for tu ilmenau

--- a/poster.tex
+++ b/poster.tex
@@ -220,7 +220,8 @@ The MNE package for M/EEG data processing
 \vspace*{-0.2em}%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Authors and logos {{{---
-\begin{minipage}{0.165\linewidth}
+% \begin{minipage}{0.165\linewidth}
+\begin{minipage}{0.155\linewidth}
     \vspace{2ex}
     \centerline{%
     \hspace{3mm}
@@ -253,30 +254,50 @@ The MNE package for M/EEG data processing
                  \MGH MGH, Harvard Med. School, USA \affilbr
                  \UW U. of Washington, USA\\
                  \JUELICH CNS (INM-3), Juelich Research Center, Germany \affilbr
-                 \ILMENAU Ilmenau U., Germany \affilbr
+                 \ILMENAU TU Ilmenau, Germany \affilbr
                  \NYU New York U., USA}
     \end{center}
 }
 %
 \hfill
 %
-\begin{minipage}{0.14\linewidth}
+\begin{minipage}{0.15\linewidth}
+    \vspace{2ex}
     \hfill
     \centerline{%
-    \includegraphics[width=0.25\linewidth]{logo_telecom}
+    \includegraphics[width=0.188\linewidth]{logo_telecom}
     \,
-    \includegraphics[width=0.31\linewidth]{logo_cea}
+    \includegraphics[width=0.233\linewidth]{logo_cea}
     \,
-    \includegraphics[width=0.35\linewidth]{logo_uw}
+    \includegraphics[width=0.45\linewidth]{logo_tuil}
     }
     \centerline{%
+    \includegraphics[width=0.24\linewidth]{logo_uw}
     \,
-    \includegraphics[width=0.60\linewidth]{logo_fzj}
+    \includegraphics[width=0.45\linewidth]{logo_fzj_cut}
     \,
-    \includegraphics[width=0.30\linewidth]{logo_cns}
+    \includegraphics[width=0.21\linewidth]{logo_cns}
     }
   
 \end{minipage}
+
+%\begin{minipage}{0.14\linewidth}
+%    \hfill
+%    \centerline{%
+%    \includegraphics[width=0.25\linewidth]{logo_telecom}
+%    \,
+%    \includegraphics[width=0.31\linewidth]{logo_cea}
+%    \,
+%    \includegraphics[width=0.35\linewidth]{logo_uw}
+%    }
+%    \centerline{%
+%    \,
+%    \includegraphics[width=0.60\linewidth]{logo_fzj}
+%    \,
+%    \includegraphics[width=0.30\linewidth]{logo_cns}
+%    }
+%  
+%\end{minipage}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % ---}}}
