--- a/poster.tex
+++ b/poster.tex
@@ -242,7 +242,7 @@ The MNE package for M/EEG data processing
     \def\NYU{\unskip$^6$}
 
     \begin{center}
-    \vspace*{-1.3ex}%
+    % \vspace*{-0.8ex}%
     \mbox{\hspace{-1em}%
     \name{A. Gramfort\PARISTECH, M. Luessi\MGH, E. Larson\UW, D.A. Engemann\JUELICH},}
     \mbox{\hspace{-1em}%
@@ -312,12 +312,14 @@ The MNE package for M/EEG data processing
 \smallskip
 
 \begin{minipage}[B]{0.47\linewidth}
+    \vspace*{0.5em}%
     \begin{myalertblock}{The MNE Software Vision}
         \mydot State-of-the-art methods, many examples, documented and tested\\
         \mydot Open development: collaboration between several centers\\
         \mydot Share the best practices, promote reproducible research\\
     \end{myalertblock}
-    \smallskip
+    % \smallskip
+    \vspace*{-0.6em}%
     \begin{myexampleblock}{Software Features}
         \subsection{Preprocessing}
         \mydot Review raw data, filter, correct ECG / EOG with SSPs, ICA\\
@@ -349,6 +351,7 @@ The MNE package for M/EEG data processing
 
 \begin{minipage}{\linewidth}
     \smallskip
+    \vspace*{0.8ex}%
 \center
 {\huge\bfseries\sffamily http://martinos.org/mne~~~~~~http://github.com/mne-tools}
 \end{minipage}
